--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -11,13 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "collapsed": true,
     "id": "0bYY5eGgz_8z",
-    "outputId": "58f1c917-8bdf-4a77-ef90-f16403929a4b"
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "outputId": "58f1c917-8bdf-4a77-ef90-f16403929a4b",
+    "tags": []
    },
    "outputs": [
     {
@@ -46,7 +51,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "ZDlERddb1NXp"
+    "id": "ZDlERddb1NXp",
+    "tags": []
    },
    "source": [
     "# Chunk 2. Google Engine Section"
@@ -54,13 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "8pfPOCJ60mOq",
-    "outputId": "5883d002-5b03-4205-fe2f-b3560ab4ce74"
+    "outputId": "5883d002-5b03-4205-fe2f-b3560ab4ce74",
+    "tags": []
    },
    "outputs": [
     {
@@ -139,7 +146,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "IComExoV1aSa"
+    "id": "IComExoV1aSa",
+    "tags": []
    },
    "source": [
     "# Chunk 3. App Section"
@@ -147,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -246,7 +254,8 @@
      ]
     },
     "id": "OPGYo7fI1da_",
-    "outputId": "2c64d237-93a2-4ca4-c917-ba49142260ad"
+    "outputId": "2c64d237-93a2-4ca4-c917-ba49142260ad",
+    "tags": []
    },
    "outputs": [
     {
@@ -260,7 +269,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db7d51ce04a64c99ab936bdd4e35a25b",
+       "model_id": "04903ba917034478b56a0bb3e5d167ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -268,15 +277,7 @@
        "VBox(children=(HTML(value='\\n        <style>\\n            .widget-html-content {\\n                color: #1e29…"
       ]
      },
-     "metadata": {
-      "application/vnd.jupyter.widget-view+json": {
-       "colab": {
-        "custom_widget_manager": {
-         "url": "https://ssl.gstatic.com/colaboratory-static/widgets/colab-cdn-widget-manager/2b70e893a8ba7c0f/manager.min.js"
-        }
-       }
-      }
-     },
+     "metadata": {},
      "output_type": "display_data"
     },
     {
@@ -289,10 +290,7 @@
       "   1. Draw a rectangle on the map above to select your region\n",
       "   2. Choose your land cover classes to compare\n",
       "   3. Configure algorithm settings\n",
-      "   4. Click 'RUN ANALYSIS' to start\n",
-      "✅ Region selected! Bounds: [-75.992, 42.68, -75.564, 42.93]\n",
-      "✅ Region selected! Bounds: [-68.549, -36.478, -62.836, -32.606]\n",
-      "✅ Region selected! Bounds: [-73.301, -14.106, -71.323, -11.535]\n"
+      "   4. Click 'RUN ANALYSIS' to start\n"
      ]
     }
    ],
@@ -1289,7 +1287,7 @@
     "id": "63wVZU-w13MN"
    },
    "source": [
-    "# Chunk 4. Requerements .txt Section"
+    "# Chunk 4. Requirements .txt Section"
    ]
   },
   {
@@ -1466,13 +1464,23 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
