--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -80,67 +80,47 @@
    ],
    "source": [
     "# ===============================================\n",
-    "# 🛰️ Google AlphaEarth Land Cover Classifier App\n",
-    "# Interactive map region selection version\n",
+    "# 🔐 EARTH ENGINE AUTHENTICATION & INITIALIZATION - BINDER FIX\n",
     "# ===============================================\n",
     "\n",
     "import ee\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import folium\n",
-    "import math\n",
-    "import os\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score, classification_report, confusion_matrix\n",
-    "from IPython.display import display, clear_output, HTML\n",
-    "import ipywidgets as widgets\n",
     "\n",
-    "# Install and import ipyleaflet for interactive map\n",
-    "try:\n",
-    "    import ipyleaflet\n",
-    "except ImportError:\n",
-    "    import sys, subprocess\n",
-    "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--quiet\", \"ipyleaflet\"])\n",
-    "    import ipyleaflet\n",
+    "PROJECT_ID = \"animated-rhythm-449415-u3\"\n",
     "\n",
-    "from ipyleaflet import Map, DrawControl, basemaps, WidgetControl\n",
-    "\n",
-    "# --- Optional imports for advanced algorithms ---\n",
-    "def _get_xgb():\n",
+    "def fix_earth_engine_auth():\n",
+    "    \"\"\"Fixed Earth Engine authentication for Binder\"\"\"\n",
+    "    \n",
+    "    # Try method 1: Direct initialization\n",
     "    try:\n",
-    "        import xgboost as xgb\n",
-    "    except Exception:\n",
-    "        import sys, subprocess\n",
-    "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--quiet\", \"xgboost\"])\n",
-    "        import xgboost as xgb\n",
-    "    return xgb\n",
-    "\n",
-    "def _get_lgb():\n",
-    "    try:\n",
-    "        import lightgbm as lgb\n",
-    "    except Exception:\n",
-    "        import sys, subprocess\n",
-    "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--quiet\", \"lightgbm\"])\n",
-    "        import lightgbm as lgb\n",
-    "    return lgb\n",
-    "\n",
-    "# ===============================================\n",
-    "# 🔐 EARTH ENGINE AUTHENTICATION & INITIALIZATION - BINDER VERSION\n",
-    "# ===============================================\n",
-    "\n",
-    "PROJECT_ID = \"animated-rhythm-449415-u3\"  # 👈 CHANGE THIS TO YOUR PROJECT ID\n",
-    "\n",
-    "try:\n",
-    "    ee.Initialize(project=PROJECT_ID)\n",
-    "    print(\"✅ Earth Engine authenticated!\")\n",
-    "except:\n",
+    "        ee.Initialize(project=PROJECT_ID)\n",
+    "        print(\"✅ Earth Engine authenticated!\")\n",
+    "        return True\n",
+    "    except:\n",
+    "        pass\n",
+    "    \n",
+    "    # Try method 2: Without project\n",
     "    try:\n",
     "        ee.Initialize()\n",
     "        print(\"✅ Earth Engine working!\")\n",
+    "        return True\n",
     "    except:\n",
-    "        print(\"⚠️ Earth Engine limited - some features may not work\")"
+    "        pass\n",
+    "    \n",
+    "    # Method 3: Force authentication\n",
+    "    try:\n",
+    "        print(\"🔐 Starting Earth Engine authentication...\")\n",
+    "        print(\"👆 Click the link above, sign in, and paste the code when prompted\")\n",
+    "        ee.Authenticate()\n",
+    "        ee.Initialize(project=PROJECT_ID)\n",
+    "        print(\"✅ Earth Engine authenticated successfully!\")\n",
+    "        return True\n",
+    "    except Exception as e:\n",
+    "        print(f\"⚠️ Earth Engine authentication failed: {str(e)}\")\n",
+    "        print(\"💡 Try running this cell again or use Google Colab instead\")\n",
+    "        return False\n",
+    "\n",
+    "# Run the fix\n",
+    "auth_success = fix_earth_engine_auth()"
    ]
   },
   {
