--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -1,12 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "gsGU92HhASeX"
    },
    "source": [
-    "# Chunk 1. Header"
+    "# ===============================================\n",
+    "# 📦 IMPORTS - ADD THIS AT THE TOP OF YOUR NOTEBOOK\n",
+    "# ===============================================\n",
+    "\n",
+    "import ee\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import folium\n",
+    "import math\n",
+    "import os\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score, classification_report, confusion_matrix\n",
+    "from IPython.display import display, clear_output, HTML\n",
+    "import ipywidgets as widgets\n",
+    "\n",
+    "# Install and import ipyleaflet for interactive map\n",
+    "try:\n",
+    "    import ipyleaflet\n",
+    "except ImportError:\n",
+    "    import sys, subprocess\n",
+    "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--quiet\", \"ipyleaflet\"])\n",
+    "    import ipyleaflet\n",
+    "\n",
+    "from ipyleaflet import Map, DrawControl, basemaps, WidgetControl# Chunk 1. Header"
    ]
   },
   {
