--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,16 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
+   "execution_count": 13,
    "metadata": {
-    "id": "gsGU92HhASeX"
+    "tags": []
    },
+   "outputs": [],
    "source": [
     "# ===============================================\n",
     "# 📦 IMPORTS - ADD THIS AT THE TOP OF YOUR NOTEBOOK\n",
@@ -38,7 +33,7 @@
     "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--quiet\", \"ipyleaflet\"])\n",
     "    import ipyleaflet\n",
     "\n",
-    "from ipyleaflet import Map, DrawControl, basemaps, WidgetControl# Chunk 1. Header"
+    "from ipyleaflet import Map, DrawControl, basemaps, WidgetControl"
    ]
   },
   {
