--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ee\n",
+    "\n",
+    "# Try to initialize Earth Engine\n",
+    "try:\n",
+    "    ee.Initialize()\n",
+    "    print(\"✅ Earth Engine already initialized!\")\n",
+    "except:\n",
+    "    print(\"🔐 Authenticating Earth Engine...\")\n",
+    "    # For MyBinder/Colab - use authentication flow\n",
+    "    ee.Authenticate()\n",
+    "    ee.Initialize()\n",
+    "    print(\"✅ Earth Engine initialized successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "tags": []
