--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,9 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 51,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Earth Engine already initialized!\n",
+      "🛰️ Welcome to AlphaEarth Land Cover Classifier on Binder!\n",
+      "📋 Click 'Run All' to start the complete app\n",
+      "⚠️ Earth Engine may have limited access in Binder\n",
+      "💡 For full features, use Google Colab instead\n",
+      "🚀 Loading app...\n",
+      "✅ Earth Engine authenticated!\n"
+     ]
+    }
+   ],
    "source": [
     "import ee\n",
     "\n",
@@ -17,18 +33,12 @@
     "    # For MyBinder/Colab - use authentication flow\n",
     "    ee.Authenticate()\n",
     "    ee.Initialize()\n",
-    "    print(\"✅ Earth Engine initialized successfully!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# ===============================================\n",
+    "    print(\"✅ Earth Engine initialized successfully!\")\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    # ===============================================\n",
     "# 📦 IMPORTS - ADD THIS AT THE TOP OF YOUR NOTEBOOK\n",
     "# ===============================================\n",
     "\n",
@@ -53,38 +63,11 @@
     "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--quiet\", \"ipyleaflet\"])\n",
     "    import ipyleaflet\n",
     "\n",
-    "from ipyleaflet import Map, DrawControl, basemaps, WidgetControl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "collapsed": true,
-    "id": "0bYY5eGgz_8z",
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "outputId": "58f1c917-8bdf-4a77-ef90-f16403929a4b",
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🛰️ Welcome to AlphaEarth Land Cover Classifier on Binder!\n",
-      "📋 Click 'Run All' to start the complete app\n",
-      "⚠️ Earth Engine may have limited access in Binder\n",
-      "💡 For full features, use Google Colab instead\n",
-      "🚀 Loading app...\n"
-     ]
-    }
-   ],
-   "source": [
+    "from ipyleaflet import Map, DrawControl, basemaps, WidgetControl\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# ===============================================\n",
     "# 📋 BINDER WELCOME MESSAGE\n",
     "# ===============================================\n",
@@ -92,40 +75,12 @@
     "print(\"📋 Click 'Run All' to start the complete app\")\n",
     "print(\"⚠️ Earth Engine may have limited access in Binder\")\n",
     "print(\"💡 For full features, use Google Colab instead\")\n",
-    "print(\"🚀 Loading app...\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ZDlERddb1NXp",
-    "tags": []
-   },
-   "source": [
-    "# Chunk 2. Google Engine Section"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "8pfPOCJ60mOq",
-    "outputId": "5883d002-5b03-4205-fe2f-b3560ab4ce74",
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Earth Engine authenticated!\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(\"🚀 Loading app...\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# ===============================================\n",
     "# 🛰️ Google AlphaEarth Land Cover Classifier App\n",
     "# Interactive map region selection version\n",
@@ -187,162 +142,13 @@
     "        ee.Initialize()\n",
     "        print(\"✅ Earth Engine working!\")\n",
     "    except:\n",
-    "        print(\"⚠️ Earth Engine limited - some features may not work\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "IComExoV1aSa",
-    "tags": []
-   },
-   "source": [
-    "# Chunk 3. App Section"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 1000,
-     "referenced_widgets": [
-      "db7d51ce04a64c99ab936bdd4e35a25b",
-      "e5b390ac2cc64c038f12ee69b5d0831c",
-      "f6e259a9fc58437ebd45a98dfd83403c",
-      "f5f2545edb2d469892ed894270d7c457",
-      "d34a392fe2e74d37a3d19979b2099cdb",
-      "2e46071f2dec41f39749457c3876ec77",
-      "727a10e6688d4ec99deecb6e56dde40c",
-      "95d67201d70a403ebff3316020041603",
-      "25a1d61d2956471491f62e6967fb5b87",
-      "c6af86fd3de5442a83b7b6c7df26042f",
-      "797340afaaab471584d7e1a790a64ff6",
-      "e20b5088e6824a8d80414e485b8d085d",
-      "fc79bd585c5b4a5cb72f793c22831b25",
-      "7c15837b0c304e19a2175b9283ee78e9",
-      "eb208e12ac6a4f228527803df1ccb758",
-      "55b42b8422474d5f8e4b0d4e2c5b4ebf",
-      "8ece55f68d2f41faaec507cbdb238e05",
-      "8273a296a1444135a57bc16512b82c4f",
-      "2a95a38fbf764629a160ea0f7111a4e6",
-      "9c34961ccfff43ae8c9600e845048f30",
-      "a1c0a4e1e888415cac04962e54266690",
-      "4820fd90f2504fc0b6527269232d1467",
-      "cd486f8402864312ac9875a387cede84",
-      "4aa8e7412be248059a992dcbee4f67e6",
-      "a5eec677c4024d2bb62541b0b1e115f8",
-      "fb2a896206414803ada4bf0b7ff8e38f",
-      "46bf4b3251674512befb81cdb6fad03c",
-      "8019cc57df7e418983fd7b2ce0db1888",
-      "c0dc51830d88407dad50de4b1cb4d40a",
-      "aafcd04dff834d8885436f9e9bad4122",
-      "7e8765d9a8a74e80a6f25618618522a9",
-      "dac61504821541558808d5690eacec8a",
-      "3ab2fe7f909447f0bd6b5ee17db80041",
-      "fcfbc2ed8ce34c13981c23a6e3c2b9c1",
-      "8a6100fe04804e86bd51b1b723253f40",
-      "4e8fe9eb7ded474dbc4ed2261a05ff55",
-      "4365418391534e8895d80833ce3e6176",
-      "3c763dcb34814596b1dc97844fc1c1aa",
-      "f80381259df74b20ba8448724af38219",
-      "d6d3690b76334bfd8066d59d54c8f08f",
-      "abe79beaa2cf42f8a02d58d3cf30e4a0",
-      "537e8dcbdd8e4b9ebfeb0c75560ccf4a",
-      "4b6f39229d6f46658b15790738c30232",
-      "e4118fe663d841c9adc16a39512b6f86",
-      "bdbc88b4ed704826ab0eec1fe84bf651",
-      "11a2da9789554c1a86f56d85018e3430",
-      "fb0f5b9570f0492aaf2812154ed158b1",
-      "ffb257236f154b61a0c89c54a7837df5",
-      "a8e409398ba04c589b0a2ce6362b46af",
-      "4f40f236d2c141a9a559e8ea4589a054",
-      "23b077562c9545aeaeac867957a7705d",
-      "8248eabc78c3467fad1f6b72f7ded920",
-      "b929f99ea50b47729edeb9ceafd24f3b",
-      "0cfbb14710e24a0ba6ada178adcedbaa",
-      "f7bf7ae0c4e94603acc09fceb9194b4e",
-      "e54fc19f783b4a8fb83706492b5989be",
-      "9a3f2f3bab55455880ee9efc67c2c6b1",
-      "24bfeed1b2a74fc287c1f134efe1b7d4",
-      "20f278c686ac429c819491fea430ec71",
-      "c610a19a5c0c4a57b1769614dbbdb931",
-      "2bb63962d5bc4a66bd487282c9bc56a7",
-      "7f83e48feadf4f9cb558a247a50c390c",
-      "7268149930944465a74f905e0e63eb32",
-      "37f0a7e82e3a4ef881cf18477c0d0b13",
-      "fdd18c6e6f634283a8a905359632848b",
-      "16820d2616f8409db6448a4c95726d57",
-      "6bc03b97871047b18ddbec0072d5c9f4",
-      "951d7ba9a8d940d4a57d87be53ebdbf8",
-      "6586b6516fb442d3b395351d10977588",
-      "14de66e4491a4e508ad79cede414a624",
-      "013a3102fd554d519d98fdf61107b13f",
-      "40fbbccd19444aae96b43ff436f51ea8",
-      "8d42052708e349439ce967d882718771",
-      "5e280589465c427a84e1d42b2a018925",
-      "2508a046668a4b3e84cedeaa646d0874",
-      "aea45fdb3b944559a9136ccca08dd8e7",
-      "a04fd216cb1d4acd9c37b917be5b2e4a",
-      "d122d396bf034adf813fe504ea877633",
-      "60a765b6380048009bf8409c30a16149",
-      "092f9883bee34e53945cdfc0caf5e7f9",
-      "39438070bda645e9bf7371b6941ed680",
-      "f83eb8bfac3944f298754c17089ba43b",
-      "6f5c87ac6fd14a2f9b9a5da1977c8bb0",
-      "0c301517c1514fedb61ff68faaad5c8d",
-      "030405c9477148639d2675c748e63c91",
-      "a71040bda78c49bfac946eb3b20aef70",
-      "a5ec5cd24bb648ab844545df29938158",
-      "2348e94c85c9441cb8e2bfc3b6b7b76b",
-      "0dc4be036cb2453aa9a3fcf7a55eaf72",
-      "6c8b242e637544ad86fa73468045a517"
-     ]
-    },
-    "id": "OPGYo7fI1da_",
-    "outputId": "2c64d237-93a2-4ca4-c917-ba49142260ad",
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🛰️ Initializing Google AlphaEarth Land Cover Classifier...\n",
-      "🔄 Installing required libraries for interactive map and color scales...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96b1e73402434fd3921d13a646449b24",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='\\n        <style>\\n            .widget-html-content {\\n                color: #1e29…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "✅ App ready!\n",
-      "💡 Instructions:\n",
-      "   1. Draw a rectangle on the map above to select your region\n",
-      "   2. Choose your land cover classes to compare\n",
-      "   3. Configure algorithm settings\n",
-      "   4. Click 'RUN ANALYSIS' to start\n",
-      "🎨 NEW: Small, clean color bars will appear in the bottom-right corner showing embedding values!\n"
-     ]
-    }
-   ],
-   "source": [
+    "        print(\"⚠️ Earth Engine limited - some features may not work\")\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
     "# ===============================================\n",
     "# ORIGINAL WORKING FUNCTIONS (from your working code)\n",
     "# ===============================================\n",
@@ -1328,8 +1134,62 @@
     "        plt.ylabel(\"Importance (%)\")\n",
     "        plt.title(f\"Embedding importance: {self.class_a.value} vs {self.class_b.value} [{self.algorithm.value.upper()}] (Yellow = Top 3 with color bars)\")\n",
     "        plt.tight_layout()\n",
-    "        plt.show()\n",
-    "\n",
+    "        plt.show() \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 277
+    },
+    "id": "V35szhG11dYO",
+    "outputId": "fa1b62bc-68f6-49b0-cd89-256669b9ac49",
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🛰️ Initializing Google AlphaEarth Land Cover Classifier...\n",
+      "🔄 Installing required libraries for interactive map and color scales...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cd0b81fe14bb4c0ca25389b6fd901121",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='\\n        <style>\\n            .widget-html-content {\\n                color: #1e29…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✅ App ready!\n",
+      "💡 Instructions:\n",
+      "   1. Draw a rectangle on the map above to select your region\n",
+      "   2. Choose your land cover classes to compare\n",
+      "   3. Configure algorithm settings\n",
+      "   4. Click 'RUN ANALYSIS' to start\n",
+      "🎨 NEW: Small, clean color bars will appear in the bottom-right corner showing embedding values!\n"
+     ]
+    }
+   ],
+   "source": [
     "# ===============================================\n",
     "# 🚀 LAUNCH THE APP\n",
     "# ===============================================\n",
@@ -1346,147 +1206,8 @@
     "print(\"   2. Choose your land cover classes to compare\")\n",
     "print(\"   3. Configure algorithm settings\")\n",
     "print(\"   4. Click 'RUN ANALYSIS' to start\")\n",
-    "print(\"🎨 NEW: Small, clean color bars will appear in the bottom-right corner showing embedding values!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "63wVZU-w13MN"
-   },
-   "source": [
-    "# Chunk 4. Requirements .txt Section"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 277
-    },
-    "id": "V35szhG11dYO",
-    "outputId": "fa1b62bc-68f6-49b0-cd89-256669b9ac49"
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "    async function download(id, filename, size) {\n",
-       "      if (!google.colab.kernel.accessAllowed) {\n",
-       "        return;\n",
-       "      }\n",
-       "      const div = document.createElement('div');\n",
-       "      const label = document.createElement('label');\n",
-       "      label.textContent = `Downloading \"${filename}\": `;\n",
-       "      div.appendChild(label);\n",
-       "      const progress = document.createElement('progress');\n",
-       "      progress.max = size;\n",
-       "      div.appendChild(progress);\n",
-       "      document.body.appendChild(div);\n",
-       "\n",
-       "      const buffers = [];\n",
-       "      let downloaded = 0;\n",
-       "\n",
-       "      const channel = await google.colab.kernel.comms.open(id);\n",
-       "      // Send a message to notify the kernel that we're ready.\n",
-       "      channel.send({})\n",
-       "\n",
-       "      for await (const message of channel.messages) {\n",
-       "        // Send a message to notify the kernel that we're ready.\n",
-       "        channel.send({})\n",
-       "        if (message.buffers) {\n",
-       "          for (const buffer of message.buffers) {\n",
-       "            buffers.push(buffer);\n",
-       "            downloaded += buffer.byteLength;\n",
-       "            progress.value = downloaded;\n",
-       "          }\n",
-       "        }\n",
-       "      }\n",
-       "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-       "      const a = document.createElement('a');\n",
-       "      a.href = window.URL.createObjectURL(blob);\n",
-       "      a.download = filename;\n",
-       "      div.appendChild(a);\n",
-       "      a.click();\n",
-       "      div.remove();\n",
-       "    }\n",
-       "  "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "download(\"download_a8b0e861-fad7-420e-8511-540f8878d7d5\", \"requirements.txt\", 116)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ requirements.txt created for Binder!\n",
-      "📁 Contents:\n",
-      "earthengine-api\n",
-      "ipywidgets\n",
-      "ipyleaflet\n",
-      "folium\n",
-      "scikit-learn\n",
-      "matplotlib\n",
-      "pandas\n",
-      "numpy\n",
-      "xgboost\n",
-      "lightgbm\n",
-      "jupyter\n",
-      "notebook\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ===============================================\n",
-    "# 📁 REQUIREMENTS.TXT GENERATOR FOR BINDER\n",
-    "# ===============================================\n",
-    "\n",
-    "requirements_txt = \"\"\"earthengine-api\n",
-    "ipywidgets\n",
-    "ipyleaflet\n",
-    "folium\n",
-    "scikit-learn\n",
-    "matplotlib\n",
-    "pandas\n",
-    "numpy\n",
-    "xgboost\n",
-    "lightgbm\n",
-    "jupyter\n",
-    "notebook\n",
-    "\"\"\"\n",
-    "\n",
-    "with open('requirements.txt', 'w') as f:\n",
-    "    f.write(requirements_txt)\n",
-    "\n",
-    "try:\n",
-    "    from google.colab import files\n",
-    "    files.download('requirements.txt')\n",
-    "except:\n",
-    "    pass\n",
-    "\n",
-    "print(\"✅ requirements.txt created for Binder!\")\n",
-    "print(\"📁 Contents:\")\n",
-    "print(requirements_txt)"
+    "print(\"🎨 NEW: Small, clean color bars will appear in the bottom-right corner showing embedding values!\")\n",
+    "    "
    ]
   },
   {
@@ -1547,7 +1268,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.2"
-  }
+  },
+  "toc-autonumbering": false
  },
  "nbformat": 4,
  "nbformat_minor": 4
