--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -24,16 +24,19 @@
    "source": [
     "import ee\n",
     "\n",
-    "# Try to initialize Earth Engine\n",
+    "# Voila-compatible Earth Engine initialization\n",
     "try:\n",
     "    ee.Initialize()\n",
     "    print(\"✅ Earth Engine already initialized!\")\n",
     "except:\n",
-    "    print(\"🔐 Authenticating Earth Engine...\")\n",
-    "    # For MyBinder/Colab - use authentication flow\n",
-    "    ee.Authenticate()\n",
-    "    ee.Initialize()\n",
-    "    print(\"✅ Earth Engine initialized successfully!\")\n",
+    "    try:\n",
+    "        # Try to initialize without authentication (works if already authenticated)\n",
+    "        ee.Initialize(project=\"animated-rhythm-449415-u3\")  # Your project ID\n",
+    "        print(\"✅ Earth Engine initialized with project!\")\n",
+    "    except:\n",
+    "        print(\"⚠️ Running in demo mode - Earth Engine features limited\")\n",
+    "        print(\"💡 For full functionality, run in Jupyter or authenticate first\")\n",
+    "        # You could add demo functionality here if needed\n",
     "    \n",
     "    \n",
     "    \n",
