--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
@@ -37,15 +37,10 @@
     "        print(\"⚠️ Running in demo mode - Earth Engine features limited\")\n",
     "        print(\"💡 For full functionality, run in Jupyter or authenticate first\")\n",
     "        # You could add demo functionality here if needed\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    # ===============================================\n",
-    "# 📦 IMPORTS - ADD THIS AT THE TOP OF YOUR NOTEBOOK\n",
-    "# ===============================================\n",
     "\n",
-    "import ee\n",
+    "# ===============================================\n",
+    "# 📦 IMPORTS\n",
+    "# ===============================================\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -67,6 +62,7 @@
     "    import ipyleaflet\n",
     "\n",
     "from ipyleaflet import Map, DrawControl, basemaps, WidgetControl\n",
+    "\n",
     "\n",
     "\n",
     "\n",
