--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -23,24 +23,6 @@
    ],
    "source": [
     "import ee\n",
-    "\n",
-    "# Voila-compatible Earth Engine initialization\n",
-    "try:\n",
-    "    ee.Initialize()\n",
-    "    print(\"✅ Earth Engine already initialized!\")\n",
-    "except:\n",
-    "    try:\n",
-    "        # Try to initialize without authentication (works if already authenticated)\n",
-    "        ee.Initialize(project=\"animated-rhythm-449415-u3\")  # Your project ID\n",
-    "        print(\"✅ Earth Engine initialized with project!\")\n",
-    "    except:\n",
-    "        print(\"⚠️ Running in demo mode - Earth Engine features limited\")\n",
-    "        print(\"💡 For full functionality, run in Jupyter or authenticate first\")\n",
-    "        # You could add demo functionality here if needed\n",
-    "\n",
-    "# ===============================================\n",
-    "# 📦 IMPORTS\n",
-    "# ===============================================\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -62,6 +44,37 @@
     "    import ipyleaflet\n",
     "\n",
     "from ipyleaflet import Map, DrawControl, basemaps, WidgetControl\n",
+    "\n",
+    "# ===============================================\n",
+    "# 🌍 EARTH ENGINE INITIALIZATION WITH GLOBAL FLAG\n",
+    "# ===============================================\n",
+    "EE_INITIALIZED = False\n",
+    "\n",
+    "def initialize_earth_engine():\n",
+    "    global EE_INITIALIZED\n",
+    "    try:\n",
+    "        ee.Initialize()\n",
+    "        print(\"✅ Earth Engine already initialized!\")\n",
+    "        EE_INITIALIZED = True\n",
+    "        return True\n",
+    "    except:\n",
+    "        try:\n",
+    "            ee.Initialize(project=\"animated-rhythm-449415-u3\")\n",
+    "            print(\"✅ Earth Engine initialized with project!\")\n",
+    "            EE_INITIALIZED = True\n",
+    "            return True\n",
+    "        except:\n",
+    "            print(\"⚠️ Running in demo mode - Earth Engine features limited\")\n",
+    "            print(\"💡 This is a demo version. Full features need authentication.\")\n",
+    "            EE_INITIALIZED = False\n",
+    "            return False\n",
+    "\n",
+    "# Initialize Earth Engine\n",
+    "initialize_earth_engine()\n",
+    "\n",
+    "print(\"🛰️ Welcome to AlphaEarth Land Cover Classifier!\")\n",
+    "print(\"🚀 Loading app...\")\n",
+    "\n",
     "\n",
     "\n",
     "\n",
