--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {
     "tags": []
    },
@@ -12,6 +12,8 @@
      "output_type": "stream",
      "text": [
       "✅ Earth Engine already initialized!\n",
+      "🛰️ Welcome to AlphaEarth Land Cover Classifier!\n",
+      "🚀 Loading app...\n",
       "🛰️ Welcome to AlphaEarth Land Cover Classifier on Binder!\n",
       "📋 Click 'Run All' to start the complete app\n",
       "⚠️ Earth Engine may have limited access in Binder\n",
@@ -707,6 +709,29 @@
     "                </div>\n",
     "                \"\"\"\n",
     "                return\n",
+    "            \n",
+    "            # CHECK EARTH ENGINE AVAILABILITY  \n",
+    "        if not EE_INITIALIZED:\n",
+    "            self.status.value = \"\"\"\n",
+    "            <div style='background: #fef3c7; padding: 12px; border-radius: 8px; margin: 10px 0;\n",
+    "                        border-left: 4px solid #f59e0b; text-align: center;'>\n",
+    "                <span style='color: #92400e; font-weight: bold; font-size: 16px;'>\n",
+    "                    🌍 Demo Mode Active - Earth Engine Not Available\n",
+    "                </span><br>\n",
+    "                <span style='color: #92400e; font-size: 14px;'>\n",
+    "                    For full functionality, please use the Jupyter version or authenticate Earth Engine\n",
+    "                </span>\n",
+    "            </div>\n",
+    "            \"\"\"\n",
+    "            \n",
+    "            # Show demo message\n",
+    "            print(\"🎭 This is a demonstration version of AlphaEarth Land Cover Classifier\")\n",
+    "            print(\"🔒 Earth Engine authentication required for satellite data analysis\")\n",
+    "            print(\"💡 To use full features:\")\n",
+    "            print(\"   1. Use the Jupyter version\")  \n",
+    "            print(\"   2. Or run locally with Earth Engine authentication\")\n",
+    "            print(\"🌟 Thank you for trying AlphaEarth!\")\n",
+    "            return\n",
     "\n",
     "            # Show progress bar and update status\n",
     "            self.progress.layout.visibility = 'visible'\n",
